Fix the width issues on mobile devices

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html,body {
     height: 100%;
     background: url("imgs/bg.jpg") no-repeat center;
     background-size: cover;
+    overflow-x: hidden;
     /*font-family: 'Saira Condensed';*/
     font-family: 'Russo One';
     margin: 0;
@@ -25,7 +26,7 @@ html,body {
     font-size: 3em;
     padding: 20px;
 
-   
+   color: white;
 }
 
 #content {
